Fix hero text alignment on mobile

--- a/css/intro.css
+++ b/css/intro.css
@@ -42,6 +42,7 @@
   padding-top: 56px; /* app-header height */
   color: #333;
   overflow: hidden;
+  width: 100%;
   background-color: #fff;
   background-image: url('images/otoron_landing_hero.webp');
   background-size: cover;
